# ragify

./: .env.example  .gitignore  README.md  benchmark_colab.ipynb  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
api/: .env.example  .gitignore  curl.sh  main.py  pyproject.toml  requirements.txt  run.sh
api/src/ai/: config.py  description.txt  embeddings.py  graph_builder.py  llm.py  reAct_agent.py  retriever.py
api/src/auth/: controller.py  repository.py  schemas.py  serializer.py  utils.py
api/src/config/: db.py  logger.py
api/src/db/: workspace.py
api/src/models/: workspace.py
api/src/routes/: auth.py  docs.py  query.py  workspace.py
api/src/types/: auth.py  docs.py  query.py  state.py  workspace.py
api/src/utils/: json.py  md.py  threads.py
api/src/workspace/: controller.py  repository.py  schemas.py  serializer.py  service.py  utils.py  vector_repository.py
api/tests/: sample_doc.txt  verify_apis.py
apps/api/: Dockerfile  README.md  main.py  run.sh
apps/benchmarking/: .gitignore  list.py  main.py
apps/benchmarking/config/: baseline.yaml  rerank.yaml
apps/benchmarking/data/: queries.json
apps/benchmarking/src/: evaluator.py
apps/web/: .dockerignore  components.json  package.json  pnpm-lock.yaml
infra/: .env.example  .gitignore
infra/configs/: qdrant.yaml
infra/docker/: docker-compose.yml
src/utils/: colors.py  json.py  yaml.py
web/: .env.example  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
web/src/: index.css  main.tsx  router.tsx
(+128 files in other folders)
